cabal-version: 1.12
name:           adventofcode2021
version:        2021
author:         Jean-Baptiste Mazon
copyright:      2021
build-type:     Simple

executable day01
  main-is: day01.lhs
  build-depends: base
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions: TypeApplications

executable day02
  main-is: day02.lhs
  build-depends: base, lens
  default-language: Haskell2010
  ghc-options: -Wall -Wno-incomplete-patterns
  default-extensions: LambdaCase, RecordWildCards, TemplateHaskell, ViewPatterns

executable day03
  main-is: day03.lhs
  build-depends: base
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions: TypeApplications

executable day04
  main-is: day04.lhs
  build-depends: base,
                 split
  default-language: Haskell2010
  ghc-options: -Wall -Wno-incomplete-patterns
  default-extensions:

executable day05
  main-is: day05.lhs
  build-depends: base, array, split
  default-language: Haskell2010
  ghc-options: -Wall -Wno-incomplete-patterns
  default-extensions: ViewPatterns

executable day06
  main-is: day06.lhs
  build-depends: base, array, lens, linear, vector, split
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions: DataKinds, GADTs

executable day07
  main-is: day07.lhs
  build-depends: base, array, split
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:

executable day08
  main-is: day08.lhs
  build-depends: base
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:

executable day09
  main-is: day09.lhs
  build-depends: base, array
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:

executable day10
  main-is: day10.lhs
  build-depends: base, megaparsec
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:

executable day11
  main-is: day11.lhs
  build-depends: base, array, mtl
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:

executable day12
  main-is: day12.lhs
  build-depends: base, containers, mtl
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:
      FlexibleContexts
    , ScopedTypeVariables
    , TypeApplications
    , ViewPatterns

executable day13
  main-is: day13.lhs
  build-depends: base, containers
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions: LambdaCase, ViewPatterns

executable day14
  main-is: day14.lhs
  build-depends: base, containers
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions: ViewPatterns

executable day15
  main-is: day15.lhs
  build-depends: base, array, containers
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions: ViewPatterns

executable day16
  main-is: day16.lhs
  build-depends: base, megaparsec
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions: DeriveFoldable, LambdaCase

executable day17
  main-is: day17.lhs
  build-depends: base, regex-posix
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions: RecordWildCards

executable day18
  main-is: day18.lhs
  build-depends: adjunctions, base, lens, megaparsec, transformers, zippers
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions: DeriveTraversable,DeriveDataTypeable,FlexibleContexts,LambdaCase,TemplateHaskell,TypeOperators,TypeFamilies

executable day19
  main-is: day19.lhs
  build-depends: base, containers, lens, linear, mtl, split, transformers
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions: FlexibleContexts, FlexibleInstances, ViewPatterns

executable day20
  main-is: day20.lhs
  build-depends: array, base, containers
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions: FlexibleContexts, ViewPatterns

executable day21
  main-is: day21.lhs
  build-depends: base, free, lens, mtl, multiset, transformers
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions: DeriveFunctor, FlexibleContexts, LambdaCase, RecordWildCards, TemplateHaskell, ViewPatterns

executable day22
  main-is: day22.lhs
  build-depends: base, array, regex-posix, vector
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions: FlexibleContexts

executable day23
  main-is: day23.lhs
  build-depends: array, base, containers
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions: ViewPatterns,TupleSections

executable day24
  main-is: day24.lhs
  build-depends: base, containers
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions: ViewPatterns
